--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "framer-motion": "^12.4.3",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
